Digital Transformation Spacing Fixed

--- a/src/Sass/pages/_DigitalTransformation.scss
+++ b/src/Sass/pages/_DigitalTransformation.scss
@@ -1,30 +1,30 @@
 .digital {
-  padding-top: 5rem;
   display: flex;
   min-height: 200vh;
-  //   border: 1px solid red;
 
   &__container {
     display: flex;
     flex-flow: column;
     align-items: center;
-    // justify-content: center;
-    // border: 1px solid blue;
   }
   &__row {
-    // min-height: 50vh;
     display: flex;
     justify-content: center;
-
     width: 100%;
-    // border: 1px solid black;
   }
 
   &__col {
     display: flex;
     flex-flow: row;
     justify-content: center;
-    // border: 1px solid yellow;
+  }
+
+  &__col-social {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    padding: 5rem;
+    height: 50rem;
   }
 
   &__col-right {
